--- a/Assets/Maps/index.html
+++ b/Assets/Maps/index.html
@@ -18,6 +18,7 @@
             <ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="mapcreator.html">Map Creator</a></li>
+				<li><a href="changelog.html">Changelog</a></li>
             </ul>
       </div>
         <div id="main">
